<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".view.main.setting.SettingFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_15">

                <TextView
                    android:id="@+id/tvPreset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_xxxl"
                    android:text="@string/preset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinnerPreset"
                    style="@style/Widget.My.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spinner_height"
                    android:layout_marginStart="@dimen/space_xl"
                    android:dropDownWidth="wrap_content"
                    android:dropDownSelector="@color/white"
                    android:padding="0dp"
                    android:popupBackground="@color/black"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvPreset"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/seekbarContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seekbar_container_height"
                android:layout_marginTop="@dimen/space_10"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/tvSeekbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/empty_height_sm"
                android:layout_marginVertical="@dimen/space_xs"
                android:orientation="horizontal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10">

                <TextView
                    android:id="@+id/tvReverb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_xxxl"
                    android:text="@string/reverb"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinnerReverb"
                    style="@style/Widget.My.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="@dimen/space_xl"
                    android:dropDownWidth="wrap_content"
                    android:dropDownSelector="@color/white"
                    android:padding="0dp"
                    android:popupBackground="@color/black"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvReverb"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xl">

                <TextView
                    android:id="@+id/tvBass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_xxxl"
                    android:text="@string/bass"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/sbBass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="@dimen/space_md"
                    android:max="100"
                    android:maxHeight="1dp"
                    android:paddingStart="@dimen/seekbar_padding"
                    android:paddingEnd="@dimen/seekbar_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBass" />

                <TextView
                    android:id="@+id/tvVirtualizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_xxxl"
                    android:layout_marginTop="@dimen/space_xl"
                    android:text="@string/_3d_virtualizer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sbBass" />

                <SeekBar
                    android:id="@+id/sbVirtualizer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="@dimen/space_md"
                    android:max="100"
                    android:maxHeight="1dp"
                    android:paddingStart="@dimen/seekbar_padding"
                    android:paddingEnd="@dimen/seekbar_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVirtualizer" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutSpatialAudio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xxl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sbVirtualizer">

                    <TextView
                        android:id="@+id/tvSpatialAudio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_xxxl"
                        android:text="@string/spatial_audio"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swSpatialAudio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_xl"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutHeadTracking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutSpatialAudio">

                    <TextView
                        android:id="@+id/tvHeadTracking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_xxxl"
                        android:text="@string/head_tracking"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/sub_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swHeadTracking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_xl"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>